frontend/test/should_fail/index_mm_min_max_node.grg
#using "index_min_max_size_model.gm"

rule ri {
	n:N -e:E-> n;
	
	if { minNodeFromIndex(bari) in nodesFromIndex(fooi); }
	
	modify {
	}
}
